fixed tutor app overlapping the navbar

--- a/application/tutorlink/static/css/apply.css
+++ b/application/tutorlink/static/css/apply.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 .app-wrapper {
     background-color: #ffdc70;
